--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1></h1>
-      <p></p>
+      <h1>This is the Title!</h1>
+      <p>That's Teamwork!</p>
     </div>
 
     <div class="container">
@@ -22,7 +22,37 @@
 
         </div>
       </div>
-    </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card bg-info text-white">
+              <div class="card-header">
+                <h2>Here's some text</h2>
+              </div>
+              <div class="card-body bg-white text-dark">
+                <p>Here's some instructions:</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card bg-dark text-white">
+              <div class="card-header">
+                <h2>ROBOTRANSLATOR!</h2>
+              </div>
+              <div class="card-body bg-white text-dark">
+                <p>Enter a number and see what is translated!</p>
+                <form>
+                  <div class="form-group">
+                    <label for="userInput">Enter a number 1-100:</label>
+                    <input class="form-control input-sm" type="number" id="userInput" placeholder="1, 25, etc">
+                  </div>
+                    <button class="btn btn-danger" type="submit">RoboTranslate!</button>
+                </form>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
   </body>
 </html>
