add styling and basic functionality.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <form>
                   <div class="form-group">
                     <label for="userInput">Enter a number 1-100:</label>
-                    <input class="form-control input-sm" type="number" id="userInput" placeholder="1, 25, etc">
+                    <input class="form-control input-sm" type="text" id="userInput" placeholder="1, 25, etc">
                   </div>
                     <button class="btn btn-danger" type="submit">RoboTranslate!</button>
                 </form>
@@ -51,6 +51,18 @@
             </div>
           </div>
 
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card bg-light results">
+              <div class="card-header">
+                <h2>Here's the robo Speech</h2>
+              </div>
+              <div class="card-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
