--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </div>
               <div class="card-body bg-white text-dark">
                 <p>Enter a number and see what is translated!</p>
-                <form>
+                <form class="roboForm">
                   <div class="form-group">
                     <label for="userInput">Enter a number 1-100:</label>
                     <input class="form-control input-sm" type="text" id="userInput" placeholder="1, 25, etc">
