clear results div in html, update function.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </div>
 
     <div class="container">
-      <div class="row">
+      <div class="row mb-4">
         <div class="col-md-12">
           <h2>Ever wanted to speak to robots in their native tongue?</h2>
           <p>Sure, we all know binary is the robot's written language, but have you ever wanted to speak to robots in their native tongue? Well look no further! Here is a top of the line Robot translator, just enter a number and the translator will translate into robot language that to humans just seems like beeps and boops.</p>
 
         </div>
       </div>
-        <div class="row">
+        <div class="row mb-4">
           <div class="col-md-6">
             <div class="card bg-info text-white">
               <div class="card-header">
@@ -58,8 +58,8 @@
               <div class="card-header">
                 <h2>Here's the robo Speech</h2>
               </div>
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              <div class="card-body resultShow">
+                
               </div>
             </div>
           </div>
