update functions of scripts to check user input.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>This is the Title!</h1>
-      <p>That's Teamwork!</p>
+      <h1>The Robotranslator!</h1>
+      <p>Are you prepared for when the machines begin their uprising?</p>
     </div>
 
     <div class="container">
@@ -59,7 +59,7 @@
                 <h2>Here's the robo Speech</h2>
               </div>
               <div class="card-body resultShow">
-                
+
               </div>
             </div>
           </div>
